// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorState renders a single error 1`] = `

<div class="flex min-h-64 w-full items-center justify-center px-6 py-4">
  <div class="flex flex-col items-center justify-center gap-3 text-center">
    <h3 class="text-sm font-medium text-foreground">
      An error occured.
    </h3>
    <div class="flex flex-col">
      <div class="flex flex-col gap-2">
        <h4 class="text-sm font-medium">
          Code explorer
        </h4>
        <p class="text-sm font-medium text-muted-foreground">
          Something went wrong
        </p>
      </div>
    </div>
  </div>
</div>

`;

exports[`ErrorState renders multiple errors 1`] = `

<div class="flex min-h-64 w-full items-center justify-center px-6 py-4">
  <div class="flex flex-col items-center justify-center gap-3 text-center">
    <h3 class="text-sm font-medium text-foreground">
      An errors occured.
    </h3>
    <div class="flex flex-col">
      <div class="flex flex-col gap-2">
        <h4 class="text-sm font-medium">
          Code explorer
        </h4>
        <p class="text-sm font-medium text-muted-foreground">
          Failed to load
        </p>
      </div>
      <div class="flex flex-col gap-2">
        <h4 class="text-sm font-medium">
          Hydrate code path
        </h4>
        <p class="text-sm font-medium text-muted-foreground">
          Aborted
        </p>
      </div>
    </div>
  </div>
</div>

`;
